--- a/styles/style.css
+++ b/styles/style.css
@@ -63,10 +63,36 @@ input[type=number] {
   height: calc(100vh - 28rem);
 }
 
-.jodit-status-bar{
-  display: none !important;
+.new {
+  border: 4px solid green;
 }
 
-.new{
-  border: 4px solid green;
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar {
+  width: 12px;
+  background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+  background-color: #555;
+}
+
+.custom-bg-button {
+  background: linear-gradient(rgba(20, 136, 204, 0.1), rgba(43, 50, 178, 0.1));
+}
+
+.custom-bg-button:hover {
+  background: linear-gradient(rgba(20, 136, 204, 0.3), rgba(43, 50, 178, 0.3));
+}
+
+.webkit-height-full {
+  height: -webkit-fill-available;
 }
