--- a/styles/style.css
+++ b/styles/style.css
@@ -10,6 +10,9 @@ body {
   font-family: 'Nunito', sans-serif;
   font-family: 'Montserrat', sans-serif;
   /* font-family: 'Roboto', sans-serif; */
+  background-color: #d6e3ff;
+  /* background-color: #202329; */
+  /* position: relative; */
 }
 
 .Montserrat {
@@ -21,12 +24,14 @@ body {
 }
 
 .bg-color {
-  background-color: #EAEDF2;
-  z-index: -100;
+  background-color: #f4f8ffd2;
+  /* background-color: #F8FAFF;
+  background-color: #ffffffc0; */
 }
 
 .bg-custom-gradient {
   background: linear-gradient(45deg, #dfe5ee, white);
+  background: #F8FAFF;
   min-height: calc(100vh - 5rem);
 }
 
@@ -68,7 +73,11 @@ input[type=number] {
 }
 
 
-::-webkit-scrollbar-track {
+::-webkit-scrollbar {
+  width: 0;
+}
+
+/* ::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   border-radius: 10px;
   background-color: #F5F5F5;
@@ -83,7 +92,7 @@ input[type=number] {
   border-radius: 10px;
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
   background-color: #555;
-}
+} */
 
 .custom-bg-button {
   background: linear-gradient(rgba(20, 136, 204, 0.1), rgba(43, 50, 178, 0.1));
@@ -95,4 +104,22 @@ input[type=number] {
 
 .webkit-height-full {
   height: -webkit-fill-available;
+}
+
+.custom-bg-color-no-auth {
+  background: linear-gradient(#00BB94, #63BAC3);
+}
+
+.w-custom {
+  width: calc(100vw - 17vw);
+}
+
+.driveheight {
+  max-height: calc(100vh - 15rem);
+  overflow-y: scroll;
+  height: calc(100vh - 15rem);
+}
+
+.h-dashboard-bottom{
+  height: calc(100vh - 15rem - 13rem);
 }
